[gd_scene load_steps=5 format=3 uid="uid://ccyqfgjflvtm5"]

[ext_resource type="Script" uid="uid://1jnv6bfbqshg" path="res://unit/unit_ui/skill_select_canvas.gd" id="1_ikcp0"]
[ext_resource type="Theme" uid="uid://dgmt8ko4oq3ew" path="res://ui/themes/general_ui_theme.tres" id="2_miql8"]
[ext_resource type="PackedScene" uid="uid://kmkcpxlo5atd" path="res://unit/unit_ui/skill_icon.tscn" id="2_xcdi7"]
[ext_resource type="PackedScene" uid="uid://cd803s00btgiy" path="res://unit/unit_ui/action_icon.tscn" id="3_gwwnc"]

[node name="SkillSelectCanvas" type="CanvasLayer"]
script = ExtResource("1_ikcp0")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 4.0
offset_right = 160.0
grow_vertical = 2
theme = ExtResource("2_miql8")

[node name="ActionContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -17.5
offset_right = 61.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="ActionIcon" parent="Panel/ActionContainer" instance=ExtResource("3_gwwnc")]
layout_mode = 2

[node name="SkillContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -27.5
offset_right = 72.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 1

[node name="SkillIcon" parent="Panel/SkillContainer" instance=ExtResource("2_xcdi7")]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -94.0
offset_right = 127.0
grow_vertical = 0
theme_override_constants/separation = 5
alignment = 1

[node name="Hide" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_miql8")
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "Hide"

[node name="Cancel" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_miql8")
theme_override_font_sizes/font_size = 24
text = "Cancel"

[connection signal="toggled" from="HBoxContainer/Hide" to="." method="_on_hide_toggled"]
[connection signal="pressed" from="HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
